Selection Tookit package v1/retrieveOutput/objects/Question__c.object
<CustomObject>
    <description>This object include pre-defined questions</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assessor__c</fullName>
        <label>Assessor</label>
        <picklist>
            <picklistValues>
                <fullName>People Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hiring Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Key Challenger</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cultural Bar Raiser</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Head of Function</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EBM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Competency__c</fullName>
        <label>Competency</label>
        <picklist>
            <picklistValues>
                <fullName>Introduction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dream Big</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Develop People</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Live Our Culture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interest And Ambition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Functional Achievements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industry Knowledge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Socio Economic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connecting The Dots</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Functional Challenge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insights</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <label>Question</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Area__c</fullName>
        <label>Sub Area</label>
        <picklist>
            <picklistValues>
                <fullName>Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Option 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Option 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Option 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Option 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Option 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Option 6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Question</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Assessor__c</columns>
        <columns>Competency__c</columns>
        <columns>Question__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Assessor__c</field>
            <operation>equals</operation>
            <value>EBM,Head of Function</value>
        </filters>
        <label>Cultural bar raiser</label>
    </listViews>
    <nameField>
        <displayFormat>Q-{0000}</displayFormat>
        <label>Question Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Questions</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>